implement multi file compilation